--- a/src/vlab/WEB/css/dev/you-dev-style.css
+++ b/src/vlab/WEB/css/dev/you-dev-style.css
@@ -12,16 +12,6 @@
     cursor: pointer;
 }
 
-#jsLab .stepsTab
-{
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100px;
-    background: white;
-    text-align: center;
-}
-
 #jsLab .addStep, #jsLab .minusStep
 {
     text-align: center;
@@ -35,51 +25,12 @@
     margin-left: 10px;
 }
 
-#jsLab .stepTab-element:hover
-{
-    text-decoration: underline;
-}
-
-#jsLab .stepTab-element
-{
-    margin: 5px 5px;
-    padding: 10px 10px;
-    cursor: pointer;
-    background: #f5f5f5;
-    color: black;
-    width: 15px;
-    height: 15px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#jsLab .selectTab
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    width: 15px;
-    height: 15px;
-    cursor: pointer;
-    background-color: #42b4d9;
-}
-
 #jsLab .lab-header
 {
     display: inline-flex;
     justify-content: space-between;
     width: 100%;
     align-items: center;
-}
-
-#jsLab .lab-main
-{
-    align-items: flex-start;
-    display: inline-flex;
-    width: 100%;
 }
 
 #jsLab .lab
@@ -92,35 +43,6 @@
     margin: 20px auto;
 }
 
-#jsLab .selectedNode circle
-{
-    fill: #f54b3e;
-}
-
-#jsLab .labBottom
-{
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-}
-
-#jsLab .lab-info
-{
-    background: #42b4d9;
-    color: white;
-    padding: 10px;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-}
-
-#jsLab .steps-table td, #jsLab .steps-table th
-{
-    padding: 7px;
-    text-align: center;
-}
-
 #jsLab .steps-buttons
 {
     display: inline-flex;
@@ -129,31 +51,11 @@
     margin: 20px auto;
 }
 
-#jsLab .steps-table
-{
-    width: 100%;
-    height: 100%;
-}
-
-#jsLab .lab-table tr td
-{
-    padding: 5px 5px;
-}
-
-#jsLab .lab-table, #jsLab .lab-table td, #jsLab .lab-table th
+#jsLab .lab-table
 {
     border: 2px solid #e1e1e1;
     border-collapse: collapse;
-}
-
-#jsLab .lab-table
-{
     width: 100%;
-}
-
-#jsLab .step-td
-{
-    vertical-align: top;
 }
 
 #jsLab .steps
@@ -167,22 +69,12 @@
     align-items: flex-start;
 }
 
-#jsLab .step-number-input span
-{
-    margin-top: 10px;
-}
-
-#jsLab .step-number-input input[type="button"]
-{
-    margin-top: 15px;
-}
-
 #jsLab .maxFlow
 {
     margin-top: 20px;
 }
 
-#jsLab .redrawGraph, #jsLab .showReference
+#jsLab .showReference
 {
     padding-top: 5px;
     padding-bottom: 5px
@@ -191,16 +83,6 @@
 #jsLab .maxFlow-input
 {
     padding: 5px 10px;
-}
-
-#jsLab .step-number-input
-{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-top: 20px;
-    width: 100%;
-    justify-content: space-between;
 }
 
 #jsLab .graphComponent
@@ -228,64 +110,9 @@
     width: 100%;
 }
 
-#jsLab .modal-body img
+#jsLab .modal-body
 {
     width: 100%;
-}
-
-#jsLab .controlPanel
-{
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#jsLab .textInputGray
-{
-    width: 100%;
-    padding: 5px 10px;
-}
-
-#jsLab .btnGray
-{
-    width: 100%;
-    cursor: pointer;
-    border: 2px solid #e1e1e1;
-    background: #e6e6e6;
-    padding: 10px 10px;
-    border-radius: 5px;
-}
-
-#jsLab .btnGray:hover
-{
-    background: #e6f6e6;
-}
-
-#jsLab .graphSvg
-{
-    /*border: 2px solid #e6e6e6;*/
-    width: auto;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#jsLab .edgePath path {
-    stroke: #333;
-    fill: #333;
-    stroke-width: 1.5px;
-}
-
-#jsLab .steps-table, #jsLab .steps-table td, #jsLab .steps-table th
-{
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-
-#jsLab .hideDiv
-{
-    display: none;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -300,14 +127,7 @@
     -moz-appearance: textfield;
 }
 
-#jsLab .tableInputData
-{
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-#jsLab .addStep, #jsLab .minusStep, #jsLab .redrawGraph, #jsLab .showReference
+#jsLab .addStep, #jsLab .minusStep, #jsLab .showReference
 {
     height: 40px;
 }
