"Help" info added

--- a/src/vlab/WEB/css/dev/you-dev-style.css
+++ b/src/vlab/WEB/css/dev/you-dev-style.css
@@ -88,6 +88,11 @@
 
 #jsLab .modal-body {
     width: 100%;
+    text-align: center;
+}
+
+#jsLab .modal-title {
+    text-align: center;
 }
 
 /* Chrome, Safari, Edge, Opera */
