--- a/src/vlab/WEB/css/dev/you-dev-style.css
+++ b/src/vlab/WEB/css/dev/you-dev-style.css
@@ -111,7 +111,7 @@
     height: 40px;
 }
 
-.lab-header_text {
+#jsLab .lab-header_text {
     width: 100%;
     padding: 20px;
     border-bottom: 1px solid #e1e1e1;
@@ -119,83 +119,83 @@
     font-weight: bold;
 }
 
-table, th, td {
+#jsLab table, th, td {
     padding: 5px;
     border: 2px solid #4ee7ff;
     width: 50px;
     text-align: center;
 }
 
-.kernel-caption {
+#jsLab .kernel-caption {
     font-size: 20px;
     color: #17a2b8;
     border-color: #17a2b8;
 }
 
-.kernel {
+#jsLab .kernel {
     margin-left: 15px;
 }
 
-.activation-func-caption {
+#jsLab .activation-func-caption {
     margin-left: 35px;
     font-size: 20px;
     color: #17a2b8;
 }
 
-.subsampling-func-caption {
+#jsLab .subsampling-func-caption {
     margin-left: 35px;
     font-size: 20px;
     color: #17a2b8;
 }
 
-.activation-func-value {
+#jsLab .activation-func-value {
     margin-left: 3px;
     font-size: 20px;
     color: #005465;
 }
 
-.subsampling-func-value {
+#jsLab .subsampling-func-value {
     margin-left: 3px;
     font-size: 20px;
     color: #005465;
 }
 
-.slide-division-line {
+#jsLab .slide-division-line {
     border-left: 1px solid #000000;
     height: auto;
 }
 
-.header-end-line {
+#jsLab .header-end-line {
     border-bottom: 1px solid #000000;
     width: auto;
 }
 
-.footer-begin-line {
+#jsLab .footer-begin-line {
     border-top: 1px solid #000000;
     width: auto;
 }
 
-.left-side-matrix {
+#jsLab .left-side-matrix {
     width: auto;
     text-align: center;
 }
 
-.right-side-matrix {
+#jsLab .right-side-matrix {
     width: auto;
     text-align: center;
 }
 
-.matrixWithAddButton {
+#jsLab .matrixWithAddButton {
     display: flex;
     align-items: center;
 }
 
-.matrixWithAddButton button {
+#jsLab .matrixWithAddButton button {
     font-size: 20px;
     padding: 0 2px 4px 2px;
 }
 
-#addMatrixButtonModal {
+#jsLab #addMatrixButtonModal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -210,7 +210,7 @@ table, th, td {
 }
 
 /* Modal Content */
-.addMatirx-modal-content {
+#jsLab .addMatirx-modal-content {
     position: relative;
     background-color: #fefefe;
     margin: auto;
@@ -225,50 +225,50 @@ table, th, td {
 }
 
 /* Add Animation */
-@-webkit-keyframes animatetop {
+#jsLab @-webkit-keyframes animatetop {
     from {top:-300px; opacity:0}
     to {top:0; opacity:1}
 }
 
-@keyframes animatetop {
+#jsLab @keyframes animatetop {
     from {top:-300px; opacity:0}
     to {top:0; opacity:1}
 }
 
 /* The Close Button */
-.close-addMatrix-modal {
+#jsLab .close-addMatrix-modal {
     color: white;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close-addMatrix-modal:hover,
-.close-addMatrix-modal:focus {
+#jsLab .close-addMatrix-modal:hover,
+#jsLab .close-addMatrix-modal:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
 }
 
-.addMatirx-modal-header {
+#jsLab .addMatirx-modal-header {
     padding: 2px 16px;
     background-color: #17a2b8;
     color: white;
     flex-direction: row-reverse;
 }
 
-.addMatirx-modal-body {
+#jsLab .addMatirx-modal-body {
     padding: 2px 16px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
 }
 
-.addMatirx-modal-body > * {
+#jsLab .addMatirx-modal-body > * {
     margin: 10px 0;
 }
 
-.addMatirx-modal-header h5 {
+#jsLab .addMatirx-modal-header h5 {
     font-size: 17px;
     margin-block-end: 5px;
 }
