--- a/src/vlab/WEB/css/dev/dev-style.css
+++ b/src/vlab/WEB/css/dev/dev-style.css
@@ -119,7 +119,7 @@
     font-weight: bold;
 }
 
-#jsLab table, th, td {
+#jsLab table td {
     padding: 5px;
     border: 2px solid #4ee7ff;
     width: 50px;
